// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel css prop extract babel 6 basic with extractStatic 1`] = `
"require(\\"./emotion.emotion.css\\");

var _css = require(\\"emotion\\").css;

<div className={\\"a \\" + \\"css-jf1v9l\\"}></div>;


emotion.emotion.css
.css-jf1v9l{color:brown;}"
`;

exports[`babel css prop extract babel 7 basic with extractStatic 1`] = `
"require(\\"./emotion.emotion.css\\");

var _css = require(\\"emotion\\").css;

<div className={\\"a \\" + \\"css-jf1v9l\\"}></div>;


emotion.emotion.css
.css-jf1v9l{color:brown;}"
`;

exports[`babel css prop inline babel 6 StringLiteral css prop value 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={/*#__PURE__*/_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 basic inline 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={\\"a \\" + /*#__PURE__*/_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 basic object 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={\\"a \\" + _css({ color: 'brown' })}></div>;"
`;

exports[`babel css prop inline babel 6 className as expression 1`] = `
"var _merge = require(\\"emotion\\").merge;

var _css = require(\\"emotion\\").css;

<div className={_merge(variable + \\" \\" + /*#__PURE__*/_css(\\"color:brown;\\"))}></div>;"
`;

exports[`babel css prop inline babel 6 className as expression string 1`] = `
"var _merge = require(\\"emotion\\").merge;

var _css = require(\\"emotion\\").css;

<div className={_merge(\`test__class\` + \\" \\" + /*#__PURE__*/_css(\\"color:brown;\\"))} this={\`hello\`}></div>;"
`;

exports[`babel css prop inline babel 6 css empty 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={/*#__PURE__*/_css()}></div>;"
`;

exports[`babel css prop inline babel 6 dynamic inline 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={\\"a \\" + /*#__PURE__*/_css(\\"color:\\", color, \\";\\")}></div>;"
`;

exports[`babel css prop inline babel 6 emptyClassName 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={/*#__PURE__*/_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 hoisting object styles 1`] = `
"var _css = require(\\"emotion\\").css;

var _ref = { color: 'brown' };
const Profile = () => <div className={\\"a \\" + _css(_ref)}></div>;"
`;

exports[`babel css prop inline babel 6 hoisting string styles 1`] = `
"var _css = require(\\"emotion\\").css;

var _ref = \\"color:\\";
const Profile = () => {
  const color = \\"blue\\";
  <div className={/*#__PURE__*/_css(_ref, color)}></div>;
};"
`;

exports[`babel css prop inline babel 6 label in class component 1`] = `
"var _css = require(\\"emotion\\").css;

class ClsComp extends React.Component {
  render() {
    return <div className={/*#__PURE__*/_css(\\"foo\\", \\"label:ClsComp;\\")}>Hello</div>;
  }
}"
`;

exports[`babel css prop inline babel 6 label in higher order component 1`] = `
"var _css = require(\\"emotion\\").css;

const foo = W => class extends Component {
  render() {
    return <div className={/*#__PURE__*/_css(\\"color:brown;\\", \\"label:foo(Component);\\")}>Hello</div>;
  }
};"
`;

exports[`babel css prop inline babel 6 label in stateless functional component 1`] = `
"var _css = require(\\"emotion\\").css;

const SFC = () => {
  return <div className={/*#__PURE__*/_css(\\"color:brown;\\", \\"label:SFC;\\")}>Hello</div>;
};"
`;

exports[`babel css prop inline babel 6 no css attr 1`] = `"<div></div>;"`;

exports[`babel css prop inline babel 6 no import css prop 1`] = `"<div className={merge(\`test__class\` + \\" \\" + /*#__PURE__*/css(\\"color:brown;\\"))}></div>;"`;

exports[`babel css prop inline babel 6 noClassName 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={/*#__PURE__*/_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 redefined-import: basic inline 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={\\"a \\" + /*#__PURE__*/_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 with spread arg in jsx opening tag 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={\\"a \\" + /*#__PURE__*/_css(\\"color:brown;\\")} {...rest}></div>;"
`;

exports[`babel css prop inline babel 7 StringLiteral css prop value 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 basic inline 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={\\"a \\" +
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 basic object 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={\\"a \\" + _css({
  color: 'brown'
})}></div>;"
`;

exports[`babel css prop inline babel 7 className as expression 1`] = `
"var _merge = require(\\"emotion\\").merge;

var _css = require(\\"emotion\\").css;

<div className={_merge(variable + \\" \\" +
/*#__PURE__*/
_css(\\"color:brown;\\"))}></div>;"
`;

exports[`babel css prop inline babel 7 className as expression string 1`] = `
"var _merge = require(\\"emotion\\").merge;

var _css = require(\\"emotion\\").css;

<div className={_merge(\`test__class\` + \\" \\" +
/*#__PURE__*/
_css(\\"color:brown;\\"))} this={\`hello\`}></div>;"
`;

exports[`babel css prop inline babel 7 css empty 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={
/*#__PURE__*/
_css()}></div>;"
`;

exports[`babel css prop inline babel 7 dynamic inline 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={\\"a \\" +
/*#__PURE__*/
_css(\\"color:\\", color, \\";\\")}></div>;"
`;

exports[`babel css prop inline babel 7 emptyClassName 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 hoisting object styles 1`] = `
"var _css = require(\\"emotion\\").css;

var _ref = {
  color: 'brown'
};

const Profile = () => <div className={\\"a \\" + _css(_ref)}></div>;"
`;

exports[`babel css prop inline babel 7 hoisting string styles 1`] = `
"var _css = require(\\"emotion\\").css;

var _ref = \\"color:\\";

const Profile = () => {
  const color = \\"blue\\";
  <div className={
  /*#__PURE__*/
  _css(_ref, color)}></div>;
};"
`;

exports[`babel css prop inline babel 7 label in class component 1`] = `
"var _css = require(\\"emotion\\").css;

class ClsComp extends React.Component {
  render() {
    return <div className={
    /*#__PURE__*/
    _css(\\"foo\\", \\"label:ClsComp;\\")}>Hello</div>;
  }

}"
`;

exports[`babel css prop inline babel 7 label in higher order component 1`] = `
"var _css = require(\\"emotion\\").css;

const foo = W => class extends Component {
  render() {
    return <div className={
    /*#__PURE__*/
    _css(\\"color:brown;\\", \\"label:foo(Component);\\")}>Hello</div>;
  }

};"
`;

exports[`babel css prop inline babel 7 label in stateless functional component 1`] = `
"var _css = require(\\"emotion\\").css;

const SFC = () => {
  return <div className={
  /*#__PURE__*/
  _css(\\"color:brown;\\", \\"label:SFC;\\")}>Hello</div>;
};"
`;

exports[`babel css prop inline babel 7 no css attr 1`] = `"<div></div>;"`;

exports[`babel css prop inline babel 7 no import css prop 1`] = `
"<div className={merge(\`test__class\` + \\" \\" +
/*#__PURE__*/
css(\\"color:brown;\\"))}></div>;"
`;

exports[`babel css prop inline babel 7 noClassName 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 redefined-import: basic inline 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={\\"a \\" +
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 with spread arg in jsx opening tag 1`] = `
"var _css = require(\\"emotion\\").css;

<div className={\\"a \\" +
/*#__PURE__*/
_css(\\"color:brown;\\")} {...rest}></div>;"
`;
